classDiagram
    class Document {
        +doc_id: str
        +part_no: str
        +article_no: str
        +title: str
        +text: str
        +citation: str
        +level: str
        +clause_no: str
        +is_primary: bool
        +boost: float
    }

    class SearchEngine {
        +search(query, top_k) list
    }

    class RAGWorkflow {
        +ask(query, retrieve_only) dict
        +ask_streaming(query) Generator
    }

    class QAService {
        +answer_query(query, useLLM) tuple
    }

    class User {
        +fullname: str
        +email: str
        +role: str
    }

    class Message {
        +query: str
        +answer: str
    }

    class ReferencedArticle {
        +title: str
        +citation: str
        +doc_id: str
        +relevance_score: float
        +text: str
    }

    User "1" --> "*" Message
    Message "*" --> "*" ReferencedArticle
    QAService --> RAGWorkflow
    RAGWorkflow --> SearchEngine
    SearchEngine --> Document : retrieves
    RAGWorkflow --> ReferencedArticle : produces
